handle text overflow pada admin sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -435,6 +435,17 @@ code {
   }
 }
 
+.navbar-text-overflow{
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 180px;
+}
+
+
+
+
 /* !RESPONSIVE LAYOUT */
 
 
